deployment/k8s/web-ui-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-ui-ns
  labels:
    app: web-ui
spec: {}
status: {}
