deployment/k8s/web-ui-service/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb-web-ui
  namespace: web-ui-ns
  labels:
    app: postgresdb-web-ui
spec:
  selector:
    matchLabels:
      app: postgresdb-web-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresdb-web-ui
    spec:
      nodeSelector:
        node: "ora2"
      containers:
        - name: postgresdb-web-ui
          image: postgres:16
          ports:
            - name: "postgres"
              containerPort: 5432
          volumeMounts:
            - name: web-db
              mountPath: /var/lib/postgresql/data
          startupProbe:
            exec:
              command:
                - pg_isready
                - "-U"
                - postgres
            periodSeconds: 10
            failureThreshold: 10
      volumes:
        - name: web-db
          persistentVolumeClaim:
            claimName: web-db-pvc
