deployment/k8s/web-ui-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  namespace: web-ui-ns
  labels:
    app: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      nodeSelector:
        node: "ora2"
      imagePullSecrets:
        - name: myregistrykey
      containers:
        - name: web-ui
          image: lesykm/market-app:latest
          command: ["java", "-jar", "/opt/app/web-ui-service.jar"]
          ports:
            - name: app-port
              containerPort: 8083
