deployment/k8s/web-ui-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui-service
  namespace: web-ui-ns
  labels:
    app: web-ui
spec:
  type: ClusterIP
  ports:
    - targetPort: 8083
      port: 8083
  selector:
    app: web-ui
