deployment/k8s/web-ui-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ui-ingress
  namespace: web-ui-ns
spec:
  rules:
    - host: mlop.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-ui-service
                port:
                  number: 8083
  ingressClassName: nginx
